log
Thu 21 Mar 2024 08:20:28 PM UTC: 
 tests:  1|4
total_score: 10/70
7fd82c6
Thu 21 Mar 2024 08:36:29 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:8: error: expected expression before ‘=’ token
   49 |        = malloc();
      |        ^
exercises.c:49:10: error: too few arguments to function ‘malloc’
   49 |        = malloc();
      |          ^~~~~~
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:540:14: note: declared here
  540 | extern void *malloc (size_t __size) __THROW __attribute_malloc__
      |              ^~~~~~
Compilation failed
b03212d
Thu 21 Mar 2024 08:42:06 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
a47ca1a
Thu 21 Mar 2024 08:42:45 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:19: error: ‘dato’ undeclared (first use in this function)
   50 |       pushBack(L, dato);
      |                   ^~~~
exercises.c:50:19: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
d3cf18e
Thu 21 Mar 2024 08:42:53 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
943b0c0
Thu 21 Mar 2024 08:43:30 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
a10e47d
Thu 21 Mar 2024 08:51:23 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:65:12: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   65 |       suma += elemento;
      |            ^~
cc1: all warnings being treated as errors
Compilation failed
2e0d64b
Thu 21 Mar 2024 08:51:38 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
338d791
Thu 21 Mar 2024 08:52:18 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:65:15: error: dereferencing ‘void *’ pointer [-Werror]
   65 |       suma += *elemento;
      |               ^~~~~~~~~
exercises.c:65:15: error: void value not ignored as it ought to be
cc1: all warnings being treated as errors
Compilation failed
b919a8b
Thu 21 Mar 2024 08:52:39 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:65:19: error: dereferencing ‘void *’ pointer [-Werror]
   65 |       int* dato = *elemento
      |                   ^~~~~~~~~
exercises.c:65:19: error: void value not ignored as it ought to be
   65 |       int* dato = *elemento
      |                   ^
exercises.c:66:7: error: expected ‘,’ or ‘;’ before ‘suma’
   66 |       suma += *dato;
      |       ^~~~
exercises.c:65:12: error: unused variable ‘dato’ [-Werror=unused-variable]
   65 |       int* dato = *elemento
      |            ^~~~
cc1: all warnings being treated as errors
Compilation failed
9b8826a
